--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@test-task-5/grpc": "workspace:*",
     "argon2": "^0.30.3",
+    "long": "^5.2.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.9.0",
