multiple databases fix

--- a/apps/auth/.env
+++ b/apps/auth/.env
@@ -2,7 +2,7 @@ SQL_HOST=localhost
 SQL_PORT=5432
 SQL_USER=test
 SQL_PASSWORD=test
-SQL_DATABASE=test
+SQL_DATABASE=test1
 
 JWT_ACCESS_SECRET=this is a key for jwt access token
 JWT_REFRESH_SECRET=this is a key for jwt refresh token, but it different from access token =)
